--- a/ios/ReactNativeDemo.xcodeproj/xcshareddata/xcschemes/ReactNativeDemo.xcscheme
+++ b/ios/ReactNativeDemo.xcodeproj/xcshareddata/xcschemes/ReactNativeDemo.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "ReactNativeStarter.app"
-               BlueprintName = "ReactNativeStarter"
-               ReferencedContainer = "container:ReactNativeStarter.xcodeproj">
+               BuildableName = "ReactNativeDemo.app"
+               BlueprintName = "ReactNativeDemo"
+               ReferencedContainer = "container:ReactNativeDemo.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "ReactNativeStarterTests.xctest"
-               BlueprintName = "ReactNativeStarterTests"
-               ReferencedContainer = "container:ReactNativeStarter.xcodeproj">
+               BuildableName = "ReactNativeDemoTests.xctest"
+               BlueprintName = "ReactNativeDemoTests"
+               ReferencedContainer = "container:ReactNativeDemo.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ReactNativeStarter.app"
-            BlueprintName = "ReactNativeStarter"
-            ReferencedContainer = "container:ReactNativeStarter.xcodeproj">
+            BuildableName = "ReactNativeDemo.app"
+            BlueprintName = "ReactNativeDemo"
+            ReferencedContainer = "container:ReactNativeDemo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "ReactNativeStarter.app"
-            BlueprintName = "ReactNativeStarter"
-            ReferencedContainer = "container:ReactNativeStarter.xcodeproj">
+            BuildableName = "ReactNativeDemo.app"
+            BlueprintName = "ReactNativeDemo"
+            ReferencedContainer = "container:ReactNativeDemo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
